# afto

./: .env  .gitignore  DESTINATION.md  README.md  pyproject.toml  requirements.txt
.tmp_dagster_home_3lr_zyu4/history/: runs.db
.tmp_dagster_home_3lr_zyu4/history/runs/: index.db
.tmp_dagster_home_3lr_zyu4/schedules/: schedules.db
backend/: nodemon.json  package-lock.json  package.json
backend/migrations/: 001_stripe_columns.sql
backend/src/: app.ts  server.ts
backend/src/config/: index.ts
backend/src/controllers/: categories.ts  checkout.ts  merchants.ts  orders.ts  products.ts  search.ts
backend/src/routes/: categories.ts  checkout.ts  merchants.ts  orders.ts  products.ts  search.ts
backend/src/scripts/: onboard-merchants.ts
backend/src/services/: elastic.ts  merchant.ts  postgres.ts  stripe.ts
backend/tests/: categories.test.ts  checkout.test.ts  merchant-service.test.ts  merchants.test.ts  orders.test.ts  products.test.ts  search.test.ts  stripe-service.test.ts  suggest.test.ts
crawler/: package-lock.json  package.json
crawler/output/: products_canonical.json
crawler/src/: collections.ts  index.ts  products.ts  types.ts
crawler/src/__tests__/: collections.test.ts  httpClient.test.ts  index.test.ts  products.test.ts  retry.test.ts  (+1 more)
frontend/: jest.config.ts  package-lock.json  package.json
ingestion_pipeline/: es_mapping.json  jobs.py  ops.py  repository.py  sample_es_queries.md  schema.sql
ingestion_pipeline/tests/: conftest.py  test_job.py  test_load_es_op.py  test_load_postgres_op.py  test_read_op.py  test_transform_op.py
(+46 files in other folders)
